Add fast LZMA2 compression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,22 @@ cmake_minimum_required(VERSION 3.16)
 project(CompressionCompetition CXX C)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
 
 include(fmt)
 include(mio)
+include(lz4)
+include(fast-lzma2)
 
 include(common)
-set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 
-add_executable(task src/task.cpp src/lz4.c src/lz4hc.c)
+add_executable(task src/task.cpp)
 target_include_directories(task PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 target_link_libraries(task PRIVATE
 	fmt::fmt
 	mio::mio
+	lz4::lz4
+	fl2::fl2
 )
