--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,8 @@ set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
 
 include(fmt)
 include(mio)
+include(frozen)
 include(fast-lzma2)
-include(bch)
-
-# include(doctest)
 
 include(common)
 
@@ -20,6 +18,6 @@ target_include_directories(task PRIVATE
 target_link_libraries(task PRIVATE
 	fmt::fmt
 	mio::mio
+	frozen::frozen
 	fl2::fl2
-	bch::bch
 )
