--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include(fmt)
 include(mio)
 include(frozen)
 include(fast-lzma2)
+include(brotli)
 
 include(common)
 
@@ -20,4 +21,6 @@ target_link_libraries(task PRIVATE
 	mio::mio
 	frozen::frozen
 	fl2::fl2
+	brotlidec-static
+	brotlienc-static
 )
