--- a/.editorconfig
+++ b/.editorconfig
@@ -8,9 +8,14 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.json]
+[*.{json,tex,html,xml,css}]
 tab_width = 2
 
-[*.py]
+[*.{json,yaml,yml,md,py,pxd,pyi,pyx}]
 indent_style = space
+
+[*.{json,yaml,yml,md}]
+indent_size = 2
+
+[*.{py,pxd,pyi,pyx}]
 indent_size = 4
