--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/macOS,Linux,Windows,JetBrains,VisualStudioCode,C++,C,Python
-# Edit at https://www.toptal.com/developers/gitignore?templates=macOS,Linux,Windows,JetBrains,VisualStudioCode,C++,C,Python
+# Created by https://www.toptal.com/developers/gitignore/api/macOS,Linux,Windows,JetBrains,VisualStudioCode,C,C++,CMake,Python
+# Edit at https://www.toptal.com/developers/gitignore?templates=macOS,Linux,Windows,JetBrains,VisualStudioCode,C,C++,CMake,Python
 
 ### C ###
 # Prerequisites
@@ -74,6 +73,23 @@ dkms.conf
 *.lai
 
 # Executables
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+# External projects
+*-prefix/
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -184,6 +200,10 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
+# Azure Toolkit for IntelliJ plugin
+# https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
+.idea/**/azureSettings.xml
+
 ### Linux ###
 *~
 
@@ -206,8 +226,7 @@ fabric.properties
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 
 # Thumbnails
 ._*
@@ -335,7 +354,15 @@ ipython_config.py
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
 #poetry.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
+.pdm.toml
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
 # Celery stuff
@@ -405,6 +432,10 @@ cython_debug/
 .ionide
 
 # Support for Project snippet scope
+.vscode/*.code-snippets
+
+# Ignore code-workspaces
+*.code-workspace
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -432,8 +463,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/macOS,Linux,Windows,JetBrains,VisualStudioCode,C++,C,Python
+# End of https://www.toptal.com/developers/gitignore/api/macOS,Linux,Windows,JetBrains,VisualStudioCode,C,C++,CMake,Python
 
-### Custom ###
-
-/data
